<resources>
    <string name="app_name">CRIS</string>
    <string name="search_hint">Search for text (or hastag)</string>
    <string name="shared_preference_file">solutions.cris.sharedPreferences</string>
    <string name="pref_organisation">solutions.cris.prefOrganisation</string>
    <string name="pref_emailAddress">solutions.cris.prefEmailAddress</string>
    <string name="prompt_address">Address*</string>
    <string name="prompt_address_optional">Address</string>
    <string name="prompt_additional_information">Additional Information</string>
    <string name="prompt_agency_name">Agency Name*</string>
    <string name="prompt_author">Author*</string>
    <string name="prompt_attendance_points">Attendance points*</string>
    <string name="prompt_cat_home_situation">Home Situation*</string>
    <string name="prompt_cat_child_status">Status*</string>
    <string name="prompt_cat_cond_mental_health">Mental Health Issues</string>
    <string name="prompt_cat_cond_substance_misuse">Substance Misuse</string>
    <string name="prompt_cat_cond_alcohol_misuse">Alcohol Misuse</string>
    <string name="prompt_cat_cond_learning_disability">Learning Disability</string>
    <string name="prompt_cat_cond_ill_health">Physical Ill Health</string>
    <string name="prompt_cat_cond_physical_disability">Physical Disability</string>
    <string name="prompt_cat_cond_autism">Autistic Spectrum Disorder</string>
    <string name="prompt_cat_cond_terminal_illness">Terminal Illness</string>
    <string name="prompt_cat_frequency_of_care">Frequency of Care Support*</string>
    <string name="prompt_cat_other_socialising">Frequency of Other Socialising*</string>
    <string name="prompt_cat_person_cared_for">Number and Type of People Cared For</string>
    <string name="prompt_cat_type_of_care">Type of Care Provided*</string>
    <string name="prompt_cat_type_of_conditions">Conditions Suffered by People Cared For*</string>
    <string name="prompt_pf_pupil_premium">Pupil Premium</string>
    <string name="prompt_pf_free_school_meals">Free School Meals</string>
    <string name="prompt_pf_child_protection_plan">Child Protection Plan</string>
    <string name="prompt_pf_child_in_need_plan">Child In Need Plan</string>
    <string name="prompt_pf_taf_early_help_plan">TAF/Early Help Plan</string>
    <string name="prompt_pf_social_services_recommendation">Social ServicesRecommendation</string>
    <string name="prompt_pf_other_plan_financial_support">Other Plan/Financial Support</string>
    <string name="prompt_pf_last_review_date">Last Review Date</string>
    <string name="prompt_pf_last_reviewed_by">Last Reviewed By</string>
    <string name="prompt_toc_domestic1">Domestic - washing, cleaning, preparing food</string>
    <string name="prompt_toc_domestic2">Domestic - assistance with shopping</string>
    <string name="prompt_toc_personal">Personal: assistance with washing person caring for, dressing, administering medication etc.</string>
    <string name="prompt_toc_emotional">Emotional</string>
    <string name="prompt_toc_supervising">Supervising/supporting sibling</string>
    <string name="prompt_case_summary">Summary (long-press to copy current)</string>
    <string name="prompt_cat_type_of_support">Type of Support Provided*</string>
    <string name="prompt_cat_score">Score</string>
    <string name="prompt_contact_number">Contact Number*</string>
    <string name="prompt_contact_Number_optional">Contact Number</string>
    <string name="prompt_content">Note</string>
    <string name="prompt_date">Date*</string>
    <string name="prompt_date_of_birth">Date of Birth*</string>
    <string name="prompt_duration">Duration (minutes)*</string>
    <string name="prompt_email">Email Address*</string>
    <string name="prompt_email_optional">Email Address</string>
    <string name="prompt_end_date">End Date (dd.mm.yyyy)</string>
    <string name="prompt_export_search">Search</string>
    <string name="prompt_export_selection">Selection</string>
    <string name="prompt_export_sort">Sort</string>
    <string name="prompt_export_type">Type</string>
    <string name="prompt_file_name">Filename*</string>
    <string name="prompt_first_name">First Name(s)*</string>
    <string name="prompt_free_school_meals">Free School Meals</string>
    <string name="prompt_group">Group Name*</string>
    <string name="prompt_head_teacher">Head Teacher</string>
    <string name="prompt_is_default">Is Default?</string>
    <string name="prompt_is_displayed">Is Displayed?</string>
    <string name="prompt_issue_date">Issue Date*</string>
    <string name="prompt_last_name">Last Name*</string>
    <string name="prompt_maca_caring_substance_misuse">With a substance misuse problem</string>
    <string name="prompt_maca_caring_physical_disability">With a physical disability</string>
    <string name="prompt_maca_caring_learning_disability">With a learning disability</string>
    <string name="prompt_maca_caring_life_limiting">With a life limiting condition</string>
    <string name="prompt_maca_caring_mental_health">With a mental_health illness</string>
    <string name="prompt_maca_caring_LGBT">From the lesbian, gay, bisexual or transgender community</string>
    <string name="prompt_maca_caring_traveller">From a traveller community</string>
    <string name="prompt_maca_caring_rural">From a rural community</string>
    <string name="prompt_maca_caring_ethnic_minority">From an ethnic minority community</string>
    <string name="prompt_maca_pht_mother">Mother</string>
    <string name="prompt_maca_pht_stepmother">Step Mother</string>
    <string name="prompt_maca_pht_father">Father</string>
    <string name="prompt_maca_pht_stepfather">Step Father</string>
    <string name="prompt_maca_pht_brothers">Brothers/Step Brothers (how many)</string>
    <string name="prompt_maca_pht_sisters">Sisters/Step Sisters (how many)</string>
    <string name="prompt_maca_pht_grandparents">Grandparents (how many)</string>
    <string name="prompt_maca_pht_other_relative">Other adult relative (Enter Relationship)</string>
    <string name="prompt_maca_pht_family_friend">Family friend</string>
    <string name="prompt_maca_pht_other">Other (please specify)</string>
    <string name="prompt_maca_clean_own_bedroom_01">Clean your own bedroom</string>
    <string name="prompt_maca_clean_other_rooms_02">Clean Other rooms</string>
    <string name="prompt_maca_wash_dishes_03">Wash up dishes or put dishes in a dishwasher</string>
    <string name="prompt_maca_decorate_room_04">Decorate rooms</string>
    <string name="prompt_maca_responsibility_for_shopping_05">Take responsibility for shopping for food</string>
    <string name="prompt_maca_carrying_heavy_things_06">Help with lifting or carrying heavy things</string>
    <string name="prompt_maca_bills_banking_benefits_07">Help with financial matters such as dealing with bills, banking money, collecting benefits</string>
    <string name="prompt_maca_work_part_time_08">Work part time to bring money in</string>
    <string name="prompt_maca_interpret_sign_other_09">Interpret, sign or use another communication system for the person you care for</string>
    <string name="prompt_maca_help_dress_undress_10">Help the person you care for to dress or undress</string>
    <string name="prompt_maca_help_wash_11">Help the person you care for to have a wash</string>
    <string name="prompt_maca_help_bath_shower_12">Help the person you care for to have a bath or shower</string>
    <string name="prompt_maca_keep_person_company_13">Keep the person you care for company e.g. sitting with them, reading to them, talking to them</string>
    <string name="prompt_maca_make_sure_alright_14">Keep an eye on the person you care for to make sure they are alright</string>
    <string name="prompt_maca_take_out_15">Take the person you care for out e.g. for a walk or to see friends or relatives</string>
    <string name="prompt_maca_take_siblings_to_school_16">Take brothers or sisters to school</string>
    <string name="prompt_maca_look_after_siblings_with_adult_17">Look after brothers or sisters whilst another adult is near by</string>
    <string name="prompt_maca_look_after_siblings_on_own_18">Look after brothers or sisters on your own</string>
    <string name="prompt_maca_reason_need_help">Why does the person(s) you care for need your help?</string>
    <string name="prompt_message_text">Message Text</string>
    <string name="prompt_name">Name*</string>
    <string name="prompt_note_type">Note Type*</string>
    <string name="prompt_role_name">Role</string>
    <string name="prompt_enter_value">Enter New Value</string>
    <string name="prompt_organisation">Organisation*</string>
    <string name="prompt_overdue_threshold">Overdue Threshold (days)*</string>
    <string name="prompt_password">Password*</string>
    <string name="prompt_password_check">Please retype password</string>
    <string name="prompt_postcode">Postcode*</string>
    <string name="prompt_postcode_optional">Postcode</string>
    <string name="prompt_relationship">Relationship*</string>
    <string name="prompt_response">Response</string>
    <string name="prompt_template">Template</string>
    <string name="prompt_school_name">School name*</string>
    <string name="prompt_second_contact_number">Alternative Contact Number</string>
    <string name="prompt_select_all">Select All</string>
    <string name="prompt_session_date">Session Date*</string>
    <string name="prompt_session_time">Session Start Time*</string>
    <string name="prompt_session_frequency">Session Frequency*</string>
    <string name="prompt_session_name">Session Name*</string>
    <string name="prompt_special_needs">Special Educational Needs and Disabilities</string>
    <string name="prompt_start_date">Start Date* (dd.mm.yyyy)</string>
    <string name="prompt_sticky_date">Sticky Date</string>
    <string name="prompt_summary">Summary*</string>
    <string name="prompt_title">Title*</string>
    <string name="prompt_transport_outbound_required">Outbound Required?</string>
    <string name="prompt_transport_return_required">Return Required?</string>
    <string name="prompt_transport_used">Used?</string>
    <string name="prompt_transport_outbound_date">Date (dd.mm.yyyy)</string>
    <string name="prompt_transport_outbound_time">Time (hh:mm)</string>
    <string name="prompt_transport_return_date">Date (dd.mm.yyyy)</string>
    <string name="prompt_transport_return_time">Time (hh:mm)</string>
    <string name="prompt_transport_booked">Booked?</string>
    <string name="prompt_version">Version*</string>
    <string name="action_add">Add</string>
    <string name="action_about">About</string>
    <string name="action_authenticating">Authenticating...</string>
    <string name="action_batch_invite">Invite</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_cancel_changes">Cancel Changes</string>
    <string name="action_continue">Continue</string>
    <string name="action_change_password">Change Password</string>
    <string name="action_change_user">Change Device Owner</string>
    <string name="action_edit_user">Edit User</string>
    <string name="action_edit_pdf_document">Edit Pdf Document</string>
    <string name="action_export">Export</string>
    <string name="action_fix_listitems">Fix ListItems</string>
    <string name="action_get_unread_documents">Get Unread Documents</string>
    <string name="action_lock">Lock</string>
    <string name="action_logout">Logout</string>
    <string name="action_new_document">New Document</string>
    <string name="action_new_pdf_document">New Pdf Document</string>
    <string name="action_new_role">New Role</string>
    <string name="action_save">Save</string>
    <string name="action_show_changes">Show Changes in this Release</string>
    <string name="action_sort_az">Sort A-Z</string>
    <string name="action_sort_za">Sort Z-A</string>
    <string name="action_sign_in">Sign in</string>
</resources>