<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save"
        android:title="@string/action_save"
        app:showAsAction="ifRoom"
        android:orderInCategory="10"/>

    <item
        android:id="@+id/action_cancel"
        android:title="@string/action_cancel_changes"
        app:showAsAction="never"
        android:orderInCategory="11"/>

    <item
        android:id="@+id/action_sort_az"
        android:title="@string/action_sort_az"
        app:showAsAction="never"
        android:orderInCategory="12"/>

    <item
        android:id="@+id/action_sort_za"
        android:title="@string/action_sort_za"
        app:showAsAction="never"
        android:orderInCategory="13"/>


</menu>